Fix header right vertical align

--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -51,7 +51,7 @@
 .header-right {
   grid-area: p;
   display: flex;
-  align-items: center;
+  // align-items: center;
   flex-wrap: nowrap;
   justify-content: flex-end;
 
